--- a/pages/employee_payroll_form.html
+++ b/pages/employee_payroll_form.html
@@ -136,10 +136,10 @@
             </div>
             <div class="row-content">
                 <label class="label text" for="notes">Notes</label>
-                <textarea id="notes" class="input" name="Notes" placeholder="Write a note..." style="height: 100px;"></textarea>
+                <textarea id="notes" class="input" name="Notes" placeholder="Write a note.." style="height: 100px;"></textarea>
             </div>
             <div class="buttonParent">
-                <a href="./home.html" class="resetButton button cancelButton">cancel</a>
+                <a href="./home.html" class="resetButton button cancelButton">Cancel</a>
                 <div class="submit-reset">
                     <button type="submit" class="button submitButton" id="submitButton">Submit</button>
                     <button type="reset" class="resetButton button">Reset</button>
