--- a/pages/employee_payroll_form.html
+++ b/pages/employee_payroll_form.html
@@ -1,3 +1,4 @@
+  
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -79,7 +80,7 @@
             </div>
             <div class="row-content">
                 <label class="label text" for="startDate">Start Date</label>
-                <div>
+                <div id="startDate">
                     <select id="day" name="Day">
                         <option value="1">1</option>
                         <option value="2">2</option>
