--- a/pages/employee_payroll_form.html
+++ b/pages/employee_payroll_form.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/payroll_form.css">
-  <script defer src ="../js/employee_payroll_data.js"></script>
+    <script defer src ="../js/employee_payroll_data.js"></script>
+    <script defer src="../js/utility.js"></script>
     <script defer src="../js/payroll_form.js"></script>
     <title>Employee Payroll Form</title>
 </head>
@@ -21,7 +22,7 @@
         </div>
     </header>
     <div class="form-content">
-        <form class="form" name="emp" action="#" onreset="resetForm()" onsubmit="save()">
+        <form class="form" name="emp" action="#" onreset="resetForm()" onsubmit="save(event)">
             <div class="form-head">Employee Payroll Form</div>
             <div class="row-content">
                 <label class="label text" for="name">Name</label>
